my-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
  labels:
    app: nextjs
spec:
  replicas: 2 # Number of pod replicas
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs-container
        image: learn-k8  # Docker image from Step 1
        ports:
        - containerPort: 3000
        readinessProbe:    # For ensuring the app is ready to accept traffic
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:     # For restarting unhealthy containers
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 20
