my-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: NodePort
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 80    # Expose service on port 80
      targetPort: 3000  # Port your Next.js app is running on inside the pod
      nodePort: 32000   # Port on the host machine to access the service (external access)
